--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     },
     "main": "background.js",
     "dependencies": {
+        "apexcharts": "^3.27.3",
         "axios": "^0.21.1",
         "core-js": "^3.6.5",
         "docx": "^5.4.1",
         "file-saver": "^2.0.5",
-        "lodash": "^4.17.20",
+        "lodash": "^4.17.21",
         "vue": "^2.6.11",
+        "vue-apexcharts": "^1.6.2",
         "vue-loading-overlay": "^3.4.2",
         "vue-lodash": "^2.1.2",
         "vue-router": "^3.2.0",
@@ -31,7 +33,7 @@
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-router": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
+        "@vue/cli-service": "^4.5.13",
         "babel-eslint": "^10.1.0",
         "electron": "^9.4.4",
         "electron-devtools-installer": "^3.1.0",
