--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "inventorymanagement",
-    "version": "0.1.0",
+    "name": "IDELLE'S",
+    "version": "2.0.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
@@ -20,7 +20,9 @@
         "core-js": "^3.6.5",
         "docx": "^5.4.1",
         "file-saver": "^2.0.5",
+        "gsap": "^3.8.0",
         "lodash": "^4.17.21",
+        "pg-hstore": "^2.3.4",
         "vue": "^2.6.11",
         "vue-apexcharts": "^1.6.2",
         "vue-loading-overlay": "^3.4.2",
